--- a/config.ini
+++ b/config.ini
@@ -11,9 +11,9 @@ testuser = Someone
 on_off = off
 
 [HTTP]
-scheme = http
-baseurl = www.baidu.com
-port = 8080
+scheme = https
+baseurl = m.taidu.com
+port = 443
 timeout = 10.0
 
 [HEADERS]
