--- a/config.ini
+++ b/config.ini
@@ -1,3 +1,9 @@
+[HTTP]
+protocol = https
+host = m.taidu.com
+port = 443
+timeout = 10.0
+
 [EMAIL]
 mail_host = smtp.163.com
 mail_user = abc@163.com
@@ -9,12 +15,6 @@ subject = Interface Test Report
 content = "All interface test has been complited\nplease read the report file about the detile of result in the attachment."
 testuser = Someone
 on_off = off
-
-[HTTP]
-scheme = https
-host = m.taidu.com
-port = 443
-timeout = 10.0
 
 [HEADERS]
 siteuid = all
