修改请求类，更加接近原始requests

--- a/interface.ini
+++ b/interface.ini
@@ -1,6 +1,6 @@
 [memberSite]
-login = /memberSite/sso/loginJson
+login = https://m.taidu.com/memberSite/sso/loginJson
 
 
 [goodsSite]
-homeBanner = /goodsSite/banner/bannerList
+homeBanner = https://m.taidu.com/goodsSite/banner/bannerList
