--- a/config.ini
+++ b/config.ini
@@ -12,7 +12,7 @@ mail_port = 25
 sender = abc@163.com
 receiver = 123456@qq.com/1254367@qq.com
 subject = Interface Test Report
-content = "All interface test has been complited\nplease read the report file about the detile of result in the attachment."
+content = ""
 testuser = Someone
 on_off = off
 
